# PRO_4r_2025_2026_IT2

./: .gitignore  01_PrvniTest.c  02_Naberacka.c  03_PlanovacVlaku.c  04_Struktury.c  05_UvodC++.cpp  06_Manipulatory.cpp  07_Vstup.cpp  08_VstupVystup.cpp  09_KontrolaVstupu.cpp  10_Cykly.cpp  11_BinCislo.cpp  12_Funkce1.cpp  13_Vypis.cpp  14_Pretezovani_funkci.cpp  15_Rozptyl.cpp  16_SablonyFunkci.cpp  17_String.cpp  18_For.cpp  19_String_analyzaLogu.cpp  20_TridaObdelnik.cpp  21_StatickeFunkce.cpp  22_Citac.cpp  23_Namespaces.cpp  24_Soubory1.cpp  24_test.txt  25_Stanice.cpp  25_Stanice_slovnik_2025.csv  26_SouboryZapis.cpp  26_zapis.txt  27_obecnyStream.cpp
28_GUI_Project/: CMakeLists.txt  letadlo.cpp  letadlo.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
29_Registr_vozidel/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
30_Meteostanice/: CMakeLists.txt  main.cpp  meteo-data.txt  meteostanice.cpp  meteostanice.h
31_MeteostaniceVector/: CMakeLists.txt  main.cpp  meteo-data.txt  meteostanice.cpp  meteostanice.h
32_AutobusoveLinky/: CMakeLists.txt  linka.cpp  linka.h  main.cpp  stanice.cpp  stanice.h
33_Posta/: CMakeLists.txt  fronta.cpp  fronta.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  osoba.cpp  osoba.h  zasobnik.cpp  zasobnik.h
34_Morseovka/: CMakeLists.txt  main.cpp  morseovka.cpp  morseovka.h  uzel.cpp  uzel.h
35_Dialogy/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
36_Rekurze/: CMakeLists.txt  main.cpp
37_ObraceniPosloupnosti/: CMakeLists.txt  main.cpp
38_Kandidati/: CMakeLists.txt  firma.cpp  firma.h  firma.ui  kandidat.cpp  kandidat.h  main.cpp  osoby.qrc
